# django

./: .gitignore  LICENSE  README.md  pyproject.toml
project_name/: settings.py  urls.py
project_name/templates/: base.html
